conditions.Conditions.scala.error
Erreur de compilation :
Conditions:2: error: identifier expected but 'if' found.
  if (estFaceMur) {recule(1:Int)}
  ^